@@ -26,13 +26,55 @@ class Sabel_Mail_Mime_Html extends Sabel_Mail_Mime_Abstract
     $this->content = $content;
   }
   
-  public function addImage($contentId, $data, $mimeType, $encoding = "base64")
+  /**
+   * @param string $contentId unique id
+   * @param array $image 'data' or 'path' are required.
+   *   'data' => image data,
+   *   'path' => image path,
+   *   'mimetype' => mime type,
+   *   'encoding' => encoding('base64'(default) or 'quoted-printable')
+   *
+   * @return self
+   */
+  public function addImage($contentId, $image)
   {
+    if (is_array($image)) {
+      foreach ($image as $k => $v) {
+        if (($lk = strtolower($k)) !== $k) {
+          $image[$lk] = $v;
+          unset($image[$k]);
+        }
+      }
+    } else {
+      $image = array("path" => $image);
+    }
+    
+    if (!isset($image["data"]) && !isset($image["path"])) {
+      $message = __METHOD__ . "() must set arg2[data](image data) or arg2[path](image path).";
+      throw new Sabel_Exception_InvalidArgument($message);
+    }
+    
+    if (!isset($image["data"])) {
+      if (($image["data"] = @file_get_contents($image["path"])) === false) {
+        $message = __METHOD__ . "() failed to open stream: No such file or directory in '{$image['path']}'.";
+        throw new Sabel_Exception_FileNotFound($message);
+      }
+    }
+    
+    if (!isset($image["encoding"])) {
+      $image["encoding"] = "base64";
+    }
+    
+    if (!isset($image["mimetype"])) {
+      $mimetype = get_mime_type($image["data"]);
+      $image["mimetype"] = (!$mimetype) ? "application/octet-stream" : $mimetype;
+    }
+    
     $this->inlineImages[] = array(
       "cid"      => $contentId,
-      "data"     => $data,
-      "mimetype" => $mimeType,
-      "encoding" => $encoding
+      "data"     => $image["data"],
+      "mimetype" => $image["mimetype"],
+      "encoding" => $image["encoding"]
     );
     
     return $this;
